Fix margins and horizontal scrolling

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,4 +1,5 @@
 body {
+  border-top: 10px solid;
   margin: 0;
   padding: 0;
 }
